--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "@delon/chart": "^17.2.0",
     "@delon/form": "^17.2.0",
     "@delon/mock": "^11.0.2",
-    "@delon/theme": "^17.2.0",
+    "@delon/theme": "^19.0.1",
     "@delon/util": "^19.0.1",
+    "angular-google-charts": "^16.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "ng-zorro-antd": "^19.0.2",
     "ngx-extended-pdf-viewer": "^23.0.0-alpha.2",
     "rxjs": "~7.8.0",
