--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@delon/theme": "^19.0.1",
     "@delon/util": "^19.0.1",
     "angular-google-charts": "^16.0.2",
+    "file-saver": "^2.0.5",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "ng-zorro-antd": "^19.0.2",
@@ -61,6 +62,7 @@
     "@angular/language-service": "^19.1.1",
     "@delon/testing": "^19.0.1",
     "@ng-util/monaco-editor": "^19.0.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
