--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-magic/ngx-gp-autocomplete": "^2.0.2",
     "@angular/animations": "^19.1.0",
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
@@ -39,6 +40,8 @@
     "@delon/mock": "^11.0.2",
     "@delon/theme": "^19.0.1",
     "@delon/util": "^19.0.1",
+    "@googlemaps/js-api-loader": "^1.16.8",
+    "@types/google.maps": "^3.58.1",
     "angular-google-charts": "^16.0.2",
     "file-saver": "^2.0.5",
     "moment": "^2.30.1",
