--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "moduleResolution":"node",
+    "types": ["node"],
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
