--- a/nginx.default.conf
+++ b/nginx.default.conf
@@ -11,8 +11,28 @@ server {
     }
 
     location /api/ {
+        
+        # proxy_read_timeout 120;
+        # proxy_connect_timeout 120;
+        # proxy_send_timeout 120;
+
         proxy_pass http://zuulserver:5555/api/;
     }
+
+    location /adminer/ {
+        # proxy_pass http://zuulserver:5555/api/;
+        
+        # resolver 172.31.31.113 valid=60s ipv6=off; 
+        # resolver 127.0.0.1 valid=30s ipv6=off;
+        # set $proxy_url "zuulserver";
+        # proxy_pass http://$proxy_url:5555/api/;
+        
+        # only when the zuul server and web client are installed in the same VM
+        # 1. kubernetes the same node
+        # 2. ECS the same task definition
+        proxy_pass http://adminer:8080;
+    }
+    
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
