--- a/nginx.default.conf
+++ b/nginx.default.conf
@@ -16,7 +16,8 @@ server {
         # proxy_connect_timeout 120;
         # proxy_send_timeout 120;
 
-        proxy_pass http://zuulserver:5555/api/;
+        # proxy_pass http://zuulserver:5555/api/;
+        proxy_pass http://apigateway:5555/api/;
     }
 
     location /adminer/ {
