--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "ng-zorro-antd": "^19.0.2",
+    "ng2-pdf-viewer": "^10.4.0",
     "ngx-extended-pdf-viewer": "^23.0.0-alpha.2",
     "rxjs": "~7.8.0",
     "screenfull": "^6.0.2",
