--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@googlemaps/js-api-loader": "^1.16.8",
     "@types/google.maps": "^3.58.1",
     "angular-google-charts": "^16.0.2",
+    "apollo-angular": "^10.0.3",
     "file-saver": "^2.0.5",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
@@ -52,7 +53,9 @@
     "rxjs": "~7.8.0",
     "screenfull": "^6.0.2",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "@apollo/client": "^3.0.0",
+    "graphql": "^16"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.8",
